--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/system": "^7.0.2",
     "@mui/x-date-pickers": "^7.28.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.8.3",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
