--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
     "@mui/system": "^7.0.2",
+    "@mui/x-data-grid": "^7.0.0",
     "@mui/x-date-pickers": "^7.28.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.83.0",
